[project]
name = "GodModeInfinity" # No spaces allowed, use dashes
description = "Image Generation with built in face detailer"
version = "1.0.1"

[project.urls]
Repository = "https://github.com/SeppoUK/God-Mode-Node"

[tool.comfy]
PublisherId = "speepdev" # Found on your Comfy Registry profile
DisplayName = "God Mode Node"
